--- a/index.html
+++ b/index.html
@@ -20,8 +20,74 @@
 			<a href="Klimaktoplan/index.html">Klimaktoplan</a>
 			<a href="Alpikol/index.html">Alpikol</a>
 			<a href="bioelektra/index.html">bioelektra</a>
+			<a href="isla/index.html">isla</a>
 		</section>
 	</main>
-	
+
+<style>
+	body {
+		background-color: #3c3c3c;
+	}
+	section {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+	a {
+		text-decoration: none;
+		width: 40vw;
+		height: 40vh;
+		background-color: #484747;
+		border-radius: 20px;
+		margin: 20px;
+		color: white;
+		font-size: 20px;
+		font-family: sans-serif;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+	a::before {
+		content: '';
+		display: block;
+		width: 80%;
+		height: 80%;
+		background: url("./gastritol/bg.png")no-repeat center / cover;
+		border-radius: 10px;
+		margin: 5px;
+	}
+	a:nth-child(2)::before {
+		background: url("./activeFlora/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(3)::before {
+		background: url("./lazea/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(4)::before {
+		background: url("./neiroplant/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(5)::before {
+		background: url("./apicold/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(6)::before {
+		background: url("./Esberitoks/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(7)::before {
+		background: url("./Vitango/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(8)::before {
+		background: url("./Klimaktoplan/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(9)::before {
+		background: url("./Alpikol/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(10)::before {
+		background: url("./bioelektra/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(11)::before {
+		background: url("./isla/bg.png")no-repeat center / cover;
+	}
+</style>
+
 </body>
 </html>
