--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			<a href="Alpikol/index.html">Alpikol</a>
 			<a href="bioelektra/index.html">bioelektra</a>
 			<a href="isla/index.html">isla</a>
+			<a href="trachisan/index.html">trahisan</a>
 		</section>
 	</main>
 
@@ -86,6 +87,9 @@
 	}
 	a:nth-child(11)::before {
 		background: url("./isla/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(12)::before {
+		background: url("./trachisan/bg.png")no-repeat center / cover;
 	}
 </style>
 
