--- a/isla/index.html
+++ b/isla/index.html
@@ -61,7 +61,7 @@
             <div class="plate">
                 <div class="plate__img">
                     <p>В Німеччині<br>
-                        з 1868 року1</p>
+                        з 1868 року<sup>1</sup></p>
                 </div>
             </div>
             <div class="plate">
