--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			<a href="bioelektra/index.html">bioelektra</a>
 			<a href="isla/index.html">isla</a>
 			<a href="trachisan/index.html">trahisan</a>
+			<a href="influcid/index.html">influcid</a>
 		</section>
 	</main>
 
@@ -90,6 +91,9 @@
 	}
 	a:nth-child(12)::before {
 		background: url("./trachisan/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(13)::before {
+		background: url("./influcid/bg.png")no-repeat center / cover;
 	}
 </style>
 
