--- a/influcid/index.html
+++ b/influcid/index.html
@@ -27,19 +27,19 @@
             <div id="menuToggle">
               <input type="checkbox" /> <span></span> <span></span> <span></span>
               <ul id="menu">
-                <li><a href="#block-1" >Переваги</a></li>
-                <li><a href="#block-2" >Дiя</a></li>
-                <li><a href="#block-3" >Склад</a></li>
-                <li><a href="#block-4" >Як приймати</a></li>
-                <li><a href="#block-5" >Де купити</a></li>
+                <li><a class="navmenu" href="#block-1" >Переваги</a></li>
+                <li><a class="navmenu" href="#block-2" >Дiя</a></li>
+                <li><a class="navmenu" href="#block-3" >Склад</a></li>
+                <li><a class="navmenu" href="#block-4" >Як приймати</a></li>
+                <li><a  href="#block-5" >Де купити</a></li>
               </ul>
             </div>
           </div>
           <div class="desctop-navigation">
-            <a href="#block-1" >Переваги</a>
-              <a href="#block-2" >Дiя</a>
-              <a href="#block-3" >Склад</a>
-              <a href="#block-4" >Як приймати</a>
+            <a class="navmenu" href="#block-1" >Переваги</a>
+              <a class="navmenu" href="#block-2" >Дiя</a>
+              <a class="navmenu" href="#block-3" >Склад</a>
+              <a class="navmenu" href="#block-4" >Як приймати</a>
               <a href="#block-5" >Де купити</a>
           </div>
           <a class="instruction" href="./instruction.pdf"
@@ -70,10 +70,10 @@
 
         <div class="header-block-2">
           <div class="block-2__plate">
-            <p>Зроблено в Німеччині</p>
+            <p>Вироблено в Німеччині</p>
           </div>
           <div class="block-2__plate">
-            <p>Для дорослих та дітей</p>
+            <p>Дорослим та дітям від 1 року</p>
           </div>
           <div class="block-2__plate">
             <p>Натуральний склад</p>
@@ -87,19 +87,19 @@
         <h2>ПЕРЕВАГИ</h2>
         <div class="block-1__text">
           <p>
-            Швидко знімає типові симптоми ГРВІ та грипу <sup> 1</sup>
+            Швидко зупиняє типові ознаки гострої інфекції дихальних шляхів <sup> 1</sup>
           </p>
           <p>
-            Зменшує потребу у жарознижуючих, краплях в ніс, препаратах від кашлю
+            Зменшує потребу у застосуванні симптоматичних засобів (жарознижуючих, краплях в ніс, препаратах від кашлю)
             <sup> 2</sup>
           </p>
           <p>
             Сприяє швидкому одужанню<sup>1</sup>
           </p>
           <p>
-            Відновлює сили після перенесеної хвороби<sup>1</sup>
+            Запобігає захворюванню при контакті з людьми, які хворіють
           </p>
-          <p>Запобігає захворюванню при контакті з хворими</p>
+          <p>Відновлює сили після перенесеної хвороби, зменшує ознаки виснаження<sup>1</sup></p>
         </div>
       </div>
       <a name="block-2"></a>
@@ -108,16 +108,16 @@
         <div class="block-2__container">
           <div class="block-2__image">
             <b>
-              Швидко знімає типові <br /> симптоми ГРВІ та грипу¹
+              Посилює природний<br>захист організму і сприяє<br>швидкому одужанню¹
             </b>
           </div>
           <div class="block-2__text">
             <p>ЗНИЖУЄ ПІДВИЩЕНУ ТЕМПЕРАТУРУ</p>
             <p>ПРИБИРАЄ ВІДЧУТТЯ ЛОМОТИ В ТІЛІ</p>
-            <p>ЗНІМАЄ ГОЛОВНИЙ БІЛЬ</p>
-            <p>УСУВАЄ БІЛЬ І ПЕРШІННЯ В ГОРЛІ</p>
+            <p>УСУВАЄ ГОЛОВНИЙ БІЛЬ</p>
             <p>ЗМЕНШУЄ ЗАКЛАДЕНІСТЬ НОСА</p>
-            <p>ПЕРЕШКОДЖАЄ РОЗВИТКУ УСКЛАДНЕНЬ</p>
+            <p>УСУВАЄ БІЛЬ І ПЕРШІННЯ В ГОРЛІ</p>
+            <p>ЗАПОБІГАЄ РОЗВИТКУ ЗАХВОРЮВАННЯ</p>
           </div>
         </div>
       </div>
@@ -125,7 +125,7 @@
       <div class="block-3">
         <h2>
           6 ПРИРОДНИХ КОМПОНЕНТІВ<br />
-          НАЙБІЛЬШ ПРИЙНЯТНИХ ДЛЯ БОРОТЬБИ З ВІРУСАМИ
+          ДЛЯ БОРОТЬБИ З ВІРУСАМИ
         </h2>
         <div class="block-3__container">
           <div class="block-3__left-block">
@@ -175,7 +175,7 @@
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
-                <b>В ПЕРШУ ДОБУ</b>
+                <b>У ПЕРШУ ДОБУ</b>
                 <b class="subtext">Кожні 2 години</b>
                 <p>(по 1 таблетці)</p>
               </div>
@@ -199,14 +199,14 @@
 
           <div class="container__subcontainer">
             <p>
-              Дітям від 12 років і дорослим: розсмоктувати по 1 таблетці кожну
-              годину (не більше 12 таблеток в день) до настання покращання
+              Дітям від 12 років і дорослим: розсмоктувати по 1 таблетці кожну годину (не більше 12 таблеток на добу) до настання покращання
+
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
-                <b>В ПЕРШУ ДОБУ</b>
+                <b>У ПЕРШУ ДОБУ</b>
                 <p class="subtext">Кожну годину</p>
-                <p>(по 1 таблетці)</p>
+                <p>по 1 таблетці</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -217,7 +217,7 @@
                   ПРИ ПОДАЛЬШОМУ<br />ЛІКУВАННІ
                 </b>
                 <p class="subtext">До одужання</p>
-                <p>(по 1-2 таблетки 3 рази на день)</p>
+                <p>1-2 таблетки 3 рази на добу</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -229,7 +229,7 @@
         <p class="block-5__container-btext">
           Тривалість лікування 7-10 днів до повного зникнення симптомів
         </p>
-        <h3>Для профілактики ГРВІ рекомендується</h3>
+        <h3>Для профілактики ГРВІ</h3>
 
         <div class="block-5__container">
           <div class="container__subcontainer">
@@ -237,7 +237,7 @@
               Дітям від 1 до 12 років: розсмоктувати по 1 таблетці 3 рази на
               добу
             </p>
-            <div class="subcontainer">
+            <div class="subcontainer vertical">
               <div class="subcontainer-particle-1">
                 <b>ЗА ДОБУ</b>
                 <p>не більше 3 таблеток на добу</p>
@@ -251,13 +251,12 @@
 
           <div class="container__subcontainer">
             <p>
-              Дітям від 1 до 12 років: розсмоктувати по 1 таблетці 3 рази на
-              добу
+              Дітям від 12 років і дорослим: розсмоктувати по 1-2 таблетки 3 рази на добу
             </p>
-            <div class="subcontainer">
+            <div class="subcontainer vertical">
               <div class="subcontainer-particle-1">
                 <b>ЗА ДОБУ</b>
-                <p>не більше 3 таблеток на добу</p>
+                <p>не більше 6 таблеток на добу</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -268,29 +267,25 @@
         </div>
         <div class="bottom-text">
           <p>
-            Застосування препарату при перших проявах симптомів ГРВІ та грипу
-            або відразу після контакту з хворими людьми сприяє запобіганню
-            розвитку захворювання;
+            Застосування препарату при перших проявах симптомів ГРВІ та грипу або відразу після контакту з людьми, які захворіли, сприяє запобіганню розвитку захворювання;
           </p>
           <p>
-            Тривалість прийому Інфлюцида після контакту з хворими на ГРВІ або
-            грип - 1 тиждень;
+            Тривалість приймання препарату Інфлюцид після контакту з хворими на ГРВІ або грип - 1 тиждень;
           </p>
         </div>
         <div class="bottom-text__b">
           <b>
-            Таблетки приймати за 30 хвилин до або через 30 хвилин після їди,
-            повільно розсмоктуючи в порожнині роту. Дітям до 3 років
-            рекомендується для зручності застосування розчиняти таблетку в
-            невеликій кількості води (наприклад, у чайній ложці води)
+            Таблетки слід повільно розсмоктувати в порожнині роту. Дітям до 3 років рекомендується розчиняти таблетку в невеликій кількості води. 
+Препарат приймати за 30 хвилин до або через 30 хвилин після їди.
           </b>
         </div>
-        <a class="buy-btn">Де купити</a>
+        <a class="buy-btn pill-btn"><p>Де купити</p></a>
       </div>
 
       <div class="block-5 block-5-2 block-5-disable">
         <div class="block-5__container">
           <div class="container__subcontainer">
+            <h4>При гострому захворюванні</h4>
             <p>
               Дітям старше 12 років і дорослим: приймати по 10 крапель кожну годину (не більше 12 прийомів у день) до настання покращання
             </p>
@@ -320,9 +315,10 @@
           </div>
 
           <div class="container__subcontainer">
+            <h4>Для профілактики ГРВІ</h4>
             <p>
-              Дітям від 12 років і дорослим:
-              приймати по 10 крапель 3 рази на добу
+              Дітям від 12 років і дорослим: 
+приймати по 10 крапель 3 рази на добу
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
@@ -335,6 +331,7 @@
                 <div class="clock-img"></div>
                 <div class="pill-container drop10"></div>
               </div>
+              <p>Тривалість застосування препарату Інфлюцид після контакту з хворими на ГРВІ або грип - 1 тиждень;</p>
             </div>
           </div>
         </div>
@@ -343,13 +340,11 @@
 
         <div class="bottom-text">
           <p>
-            Застосування препарату при перших проявах симптомів ГРВІ та грипу
-            або відразу після контакту з хворими людьми сприяє запобіганню
-            розвитку захворювання;
+            Застосування препарату при перших проявах симптомів ГРВІ та грипу або відразу після контакту з людьми, які захворіли, сприяє запобіганню розвитку захворювання;
+
           </p>
           <p>
-            Тривалість прийому Інфлюцида після контакту з хворими на ГРВІ або
-            грип - 1 тиждень;
+            Краплі розчину приймають за 30 хвилин до або через 30 хвилин після їди, потримавши їх деякий час у роті перед тим як проковтнути. Дітям віком від 12 років препарат можна розчиняти у невеликій кількості води (наприклад, у чайній ложці води).
           </p>
         </div>
         <a class="buy-btn">Де купити</a>
@@ -360,12 +355,44 @@
             <h2>КОРИСНА ІНФОРМАЦІЯ</h2>
             <div class="block-6__container">
               <div class="block-6__container-img"><p>Грип сезону 2020</p></div>
-              <div class="block-6__container-text"><p>Епідеміологічний сезон розпочався і вже настав час до нього готуватися. Зверніть увагу, що різниця між грипом та ГРВІ (гострою респіраторною вірусною інфекцією) полягає у тому, що збудниками грипу є різні штами вірусу грипу (варіанти одного виду вірусу, що відрізняються за рядом властивостей), а збудниками ГРВІ є понад 200 різноманітних вірусів, які часто не пов'язані генетично та належать до різних груп захворювань.
-                Чого чекати у новому сезоні 2020 р.? За розрахунками ВООЗ, упродовж нового епідемічного сезону в Північній півкулі циркулюватимуть віруси грипу, подібні …</p>
+              <div class="block-6__container-text"><p>Епідеміологічний сезон розпочався і вже настав час до нього готуватися. Зверніть увагу, що різниця між грипом та ГРВІ (гострою респіраторною вірусною інфекцією) полягає у тому, що збудниками грипу є різні штами вірусу грипу (варіанти одного виду вірусу, що відрізняються за рядом властивостей), а збудниками ГРВІ є понад 200 різноманітних вірусів, які часто не пов'язані генетично та належать до різних груп захворювань.</p>
+                <p>Чого чекати у новому сезоні 2020 рр.?</p>
               </div>
               <button class="accordion">Детальнiше</button>
               <div class="panel">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias cumque minus praesentium ratione ullam. Ab minima minus, omnis quidem reiciendis suscipit. Ab adipisci aut deleniti dolorum exercitationem fuga incidunt repellat.</p>
+                <p>За розрахунками ВООЗ, упродовж нового епідемічного сезону в Північній півкулі циркулюватимуть віруси грипу, подібні до:</p>
+                <ul>
+                  <li>A/Brisbane/02/2018(H1N1) pdm09;</li>
+                  <li>A/Kansas/14/2017(H3N2);</li>
+                  <li>B/Colorado/06/2017 (лінія B/Victoria/2/87);</li>
+                  <li>B/Phuket/3073/2013 (лінія B/Yamagata/16/88).</li>
+                </ul>
+                <div class="panel__checklist">
+                  <p>Нагадаємо основні симптоми грипу:</p>
+                  <p>раптовий початок;</p>
+                  <p>головний біль;</p>
+                  <p>підвищення температури тіла до 38 °С і більше;</p>
+                  <p>біль у горлі;</p>
+                  <p>кашель;</p>
+                  <p>ломота у м’язах і суглобах;</p>
+                  <p>може бути блювота та пронос.</p>
+                  <p>як ускладнення хвороби - пневмонія, яка інколи може за 4-5 днів призвести до смерті хворого. Також нерідко розвивається серцева недостатність.</p>
+                </div>
+                <p>Якщо Ви вже захворіли, обов’язково зверніться до свого сімейного лікаря чи терапевта. </p>
+                <p class="panel__accent-text">Інфлюцид – ваш правильний вибір при застуді та грипі</p>
+                <div class="panel__checklist">
+                  <p>Доведена противірусна активність Інфлюциду при сезонному  H1N1, H5N2, H3N2 грипі*</p>
+                  <p>Активно бореться з вірусами грипу та ГРЗ*</p>
+                  <p>Швидко знімає типові симптоми ГРВІ та грипу</p>
+                  <p>Зменшує потребу у застосуванні симптоматичних засобів**</p>
+                  <p>Запобігає захворюванню при контакті з хворим</p>
+                </div>
+                <div class="panel__sub">
+                  <p>* М.Ю. Еропкін, Т.М. Гкудкова, Д.М. Даниленко та соавт: «Пандемический грипп 2009 г в России», РМЖ Том 18, 2010</p>
+                  <p>** М. Тинессе-Маллвиц, В. Майданник, Т. Келлер, П. Клемент. Комбинированное гомеопатическое средство для лечения лихорадочных ОРВИ:
+ Международное, рандомизированное, контролируемое исследование. Журнал «Forsch Komplementmed», Том 22, Издание 3, июнь 2015 г.</p>
+                  <p>Державна установа «Центр громадського здоров’я Міністерства охорони здоров’я України», www.phc.org.ua</p>
+                </div>
               </div>
             </div>
 
@@ -376,14 +403,37 @@
               </div>
               <button class="accordion">Детальнiше</button>
               <div class="panel">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias cumque minus praesentium ratione ullam. Ab minima minus, omnis quidem reiciendis suscipit. Ab adipisci aut deleniti dolorum exercitationem fuga incidunt repellat.</p>
+                <p>Найбільше число застуд у дитини припадає на вік від шести місяців до 12 років, тому що формується імунна система.Ефективне лікування застуди та ГРВЗ у дітей вимагає негайного реагування на перші ознаки, адже початок захворювання зазвичай легкий, не стрімкий:</p>
+
+                  <div class="panel__checklist">
+                  <p>Погане самопочуття, біль голови та м'язів;</p>
+                  <p>Сонливість або порушення сну;</p>
+                  <p>Зниження апетиту;</p>
+                  <p>Погіршення настрою, капризність;</p>
+                  <p>Біль та першіння в горлі;</p>
+                  <p>Озноб та лихоманка (загалом невисока температура);</p>
+                  <p>Риніт — на початку водянисті виділення, які стікають також по задній стінці глотки, у подальшому — відчуття закладення носа та порушення носового дихання, порушення нюху, чхання;</p>
+                  <p>У сезон застуд так хочеться підтримати імунітет дитини, щоб вона не хворіла або одужувала швидше, але як зробити це безпечно? Адже для дітей хочеться застосовувати тільки натуральні і перевірені засоби.</p>
+                </div>
+                <p class="panel__accent-text">Інфлюцид – ваш правильний вибір при застуді та грипі</p>
+                <p>Німецький препарат Інфлюцид зміцнює імунітет і сприяє одужанню.
+Ефективність та безпечність препарату Інфлюцид вивчені в ході багатьох клінічних досліджень, у тому числі за участю дітей*.</p>
+                <p>Бажаємо Вам та Вашим діткам надміцного здоров’я та вкрай стійкого імунітету.</p>
+                <div class="panel__sub">
+                  <p>*При перших ознаках застуди у дитини необхідно звернутися до лікаря.</p>
+                </div>
+
+
+
+
               </div>
               <a name="block-5"></a>
             </div>
 
             <div class="block-7">
               <h2>ДЕ КУПИТИ</h2>
-              <div class="block-7__img"></div>
+              <div id="comp_wgt" data-drug="11722,11721" data-lang="ru" data-url="https://compendium.com.ua/info/11096/infljutsid/" data-proj="инфлюцид" style="border-color: #2894cf; width: 80%"><div class="title" style="background: #2894cf;"><a href="https://compendium.com.ua/info/11096/infljutsid/" title="ИНФЛЮЦИД, Alpen Pharma AG" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg" data-pagespeed-url-hash="161338521" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>
+              <!-- <div class="block-7__img"></div> -->
               <div class="block-7__text">
                 <h3>Доказова база</h3>
                 <ol>
