--- a/isla/index.html
+++ b/isla/index.html
@@ -27,7 +27,7 @@
                 <li><a class="translated-text navmenu" key="g2" href="#block2">Коли потрібна</a></li>
                 <li><a class="translated-text navmenu" key="g4" href="#block3">Склад</a></li>
                 <li><a class="translated-text navmenu" key="g4" href="#block4">Як приймати</a></li>
-                <li><a class="translated-text navmenu" key="g5" href="https://apteka911.com.ua/shop/actions/spets-tsenyi-na-tm-biolektra-da575?utm_source=biolectra.com.ua&utm_medium=referral">Де купити</a></li>
+                <li><a class="translated-text navmenu" key="g5" href="#block5">Де купити</a></li>
                 <li><a class="translated-text navmenu lang" key="g6" href="#map">ru</a></li>
             </ul>
         </div>
@@ -37,7 +37,7 @@
         <a class="translated-text navmenu" key="g2" href="#block2">Коли потрібна</a>
         <a class="translated-text navmenu" key="g4" href="#block3">Склад</a>
         <a class="translated-text navmenu" key="g4" href="#block4">Як приймати</a>
-        <a class="translated-text navmenu" key="g5" href="https://apteka911.com.ua/shop/actions/spets-tsenyi-na-tm-biolektra-da575?utm_source=biolectra.com.ua&utm_medium=referral">Де купити</a>
+        <a class="translated-text navmenu" key="g5" href="#block5">Де купити</a>
         <a class="translated-text navmenu  lang" key="g6" href="#map">ru</a>
     </div>
     <!--    <a class="instruction" href="./instruction.pdf"-->
@@ -131,9 +131,11 @@
     <div class="block block-5__container"></div>
 </div>
 
+<a name="block5"></a>
+
 <div class="block-6">
     <p>Де купити</p>
-    <div class="block-6__container"></div>
+    <div id="comp_wgt" data-drug="69096,69099" data-lang="ua" data-url="https://compendium.com.ua/dec/266969/" data-proj="Ісла" style="border-color: rgb(0, 0, 160); width: 80%;"><div class="title" style="background: rgb(0, 0, 160);"><a href="https://compendium.com.ua/dec/266969/" title="ІСЛА-МІНТ/ІСЛА-МООС, Alpen Pharma AG" class="logo"><img src="https://compendium.com.ua/widget/compendium_ua.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg" data-pagespeed-url-hash="161338521" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Мапа</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Кошик</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>
 </div>
 
 
