--- a/influcid/html/index.html
+++ b/influcid/html/index.html
@@ -366,11 +366,27 @@
               </div>
             </div>
 
-            <div class="disklamer">
+<!--          //////////////-->
 
+          <div class="disclamer-tra">
+            <ol>
+              <li> https://www.engelhard.de/unternehmen/geschichte</li>
+              <li> Продажі в упаковках препаратів Цетрарії ісландської (ісландського моху) за період 2015-2019 роки (2019 -3 квартали) згідно даних роздібного аудиту    Sale Out Системи дослідження фармацевтичного ринку «Фармексплорер» </li>
+            </ol>
+            <div class="logos-container">
+              <a class="disclamer-tra__logo" href=""><p><b>Виробник:</b><br>Енгельхард Арцнайміттель<br>Гмбх і Ко (Німеччина)</p></a>
+              <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Постачальник:</b><br> Альпен Фарма АГ (Швейцарія)</p></a>
             </div>
+            <p>
+              Реклама лікарського засобу. Перед застосуванням ознайомтесь з інструкцією та проконсультуйтеся з лікарем. Зберігати у недоступному для дітей місці. Ісла Мінт РП UA/2187/01/01 з 20.03.2015 по 20.03.2020; Ісла Моос РП UA/2188/01/01 з 03.03.2015 по 03.03.2020. Ексклюзивний дистриб’ютор:
+              ПрАТ «Натурфарм», вул. Лісна, 30-А, м. Київ, Пуща-Водиця, 04075; телефон: (044) 401-81-03.
+            </p>
+          </div>
+          <div class="disclamer-warning">
+            <p>САМОЛІКУВАННЯ МОЖЕ БУТИ ШКІДЛИВИМ ДЛЯ ВАШОГО ЗДОРОВ’Я</p>
+          </div>
 
-
+            <!--//////////////-->
 
         </div>
     </div>
