--- a/influcid/index-ru.html
+++ b/influcid/index-ru.html
@@ -33,7 +33,7 @@
                 <li><a class="navmenu" href="#block-3" >Состав</a></li>
                 <li><a class="navmenu" href="#block-4" >Как принимать</a></li>
                 <li><a class="where-to-buy" href="#block-5" >Где купить</a></li>
-                <li><a href="index-ru.html" >ru</a></li>
+                <li><a href="index.html" >ua</a></li>
               </ul>
             </div>
           </div>
@@ -43,7 +43,7 @@
               <a class="navmenu" href="#block-3" >Состав</a>
               <a class="navmenu" href="#block-4" >Как принимать</a>
               <a class="where-to-buy" href="#block-5" >Где купить</a>
-              <a href="index.html" >ua</a>
+            <a href="index.html" >ua</a>
           </div>
           <a class="instruction" href="./instruction.pdf"
           ><p class="translated-text" key="instruction">Инструкция</p></a
@@ -89,7 +89,7 @@
           <p>
             Предотвращает заболевание после контакта с людьми, которые болеют.
           </p>
-          <p>Восстанавливает силы после перенесенного заболевания.¹</p>
+          <p>Блокирует размножение вируса и предупреждает распространение вирусной инфекции</p>
         </div>
       </div>
       <a name="block-2"></a>
@@ -194,7 +194,7 @@
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
                 <b>В ПЕРВЫЕ СУТКИ</b>
-                <p class="subtext">Каждый час</p>
+                <b class="subtext">Каждый час</b>
                 <p>по 1 таблетке</p>
               </div>
               <div class="subcontainer-particle-2">
@@ -205,7 +205,7 @@
                 <b>
                   ПРИ ДАЛЬНЕЙШЕМ<br />ЛЕЧЕНИИ
                 </b>
-                <p class="subtext">До выздоровления</p>
+                <b class="subtext">До выздоровления</b>
                 <p>1-2 таблетки 3 раза в сутки</p>
               </div>
               <div class="subcontainer-particle-2">
@@ -383,7 +383,7 @@
                 <div class="panel__sub">
                   <p>М.Ю. Еропкин, Т.М. Гкудкова, Д.М. Даниленко и соавт: «Пандемический грипп 2009 г в России», РМЖ Том 18, 2010</p>
                   <p> М. Тинессе-Маллвиц, В. Майданник, Т. Келлер, П. Клемент. Комбинированное гомеопатическое средство для лечения лихорадочных ОРВИ:  Международное, рандомизированное, контролируемое исследование. Журнал «Forsch Komplementmed», Том 22, Издание 3, июнь 2015 г.</p>
-                  <p>1www.phc.org.ua.</p>
+                  <p>¹www.phc.org.ua.</p>
                 </div>
               </div>
             </div>
@@ -406,14 +406,14 @@
                   <p>Ухудшение настроения, капризность;</p>
                   <p>Боль и першение в горле;</p>
                   <p>Озноб и лихорадка;</p>
-                  <p>Ринит - в начале водянистые выделения, которые стекают также по задней стенке глотки, в дальнейшем - ощущение заложенности носа и нарушение носового дыхания, нарушение обоняния, чхание;</p>
-                  <p>В сезон простуд так хочется поддержать иммунитет ребенка, чтобы он не болел или выздоравливал быстрее, как сделать это безопасно? Ведь для детей хочется применять только натуральные и проверенные средства.</p>
+                  <p>Ринит - в начале водянистые выделения, которые стекают также по задней стенке глотки, в дальнейшем - ощущение заложенности носа и нарушение носового дыхания, нарушение обоняния, чихание;¹</p>
                 </div>
+                <p>В сезон простуд так хочется поддержать иммунитет ребенка, чтобы он не болел или выздоравливал быстрее, как сделать это безопасно? Ведь для детей хочется применять только натуральные и проверенные средства.</p>
                 <p class="panel__accent-text">Инфлюцид - ваш правильный выбор при простуде и гриппе.</p>
                 <p>Немецкий препарат Инфлюцид укрепляет иммунитет и способствует выздоровлению.
                   Эффективность и безопасность препарата Инфлюцид изучены в ходе многих клинических исследований, в том числе с участием детей *.
                 </p>
-                <p>Желаем Вам и Вашим деткам сверхпрочного здоровья и крайне стойкого иммунитета.
+                <p>Желаем Вам и Вашим деткам крепкого здоровья.
                 </p>
                 <div class="panel__sub">
                   <p>* При первых признаках простуды у ребенка необходимо обратиться к врачу.</p>
