--- a/influcid/index.html
+++ b/influcid/index.html
@@ -23,7 +23,7 @@
 
         <div class="navigation-logo">
           <a  href="index.html" class="logo">Iнфлюцид</a>
-          <a class="where-to-buy where-to-buy__desktop">Де купити</a>
+          <a class="where-to-buy where-to-buy__desktop" href="#block-5">Де купити</a>
           <div class="navigation-top" role="navigation">
             <div id="menuToggle">
               <input type="checkbox" /> <span></span> <span></span> <span></span>
@@ -89,7 +89,7 @@
           <p>
             Запобігає захворюванню при контакті з людьми, які хворіють
           </p>
-          <p>Відновлює сили після перенесеної хвороби, зменшує ознаки виснаження¹</p>
+          <p>Блокує розмноження вірусу та запобігає поширенню вірусної інфекції</p>
         </div>
       </div>
       <a name="block-2"></a>
@@ -161,7 +161,7 @@
         <div class="block-5__container">
           <div class="container__subcontainer">
             <p>
-              Дітям від 1 до 12 років: розсмоктувати по 1 таблетці кожні 2
+              <b>Дітям від 1 до 12 років:</b> розсмоктувати по 1 таблетці кожні 2
               години (не більше 8 таблеток у день) до настання покращання
             </p>
             <div class="subcontainer">
@@ -190,7 +190,7 @@
 
           <div class="container__subcontainer">
             <p>
-              Дітям від 12 років і дорослим: розсмоктувати по 1 таблетці кожну годину (не більше 12 таблеток на добу) до настання покращання
+              <b>Дітям від 12 років і дорослим:</b> розсмоктувати по 1 таблетці кожну годину (не більше 12 таблеток на добу) до настання покращання
 
             </p>
             <div class="subcontainer">
@@ -225,7 +225,7 @@
         <div class="block-5__container">
           <div class="container__subcontainer">
             <p>
-              Дітям від 1 до 12 років: розсмоктувати по 1 таблетці 3 рази на
+              <b>Дітям від 1 до 12 років:</b> розсмоктувати по 1 таблетці 3 рази на
               добу
             </p>
             <div class="subcontainer vertical">
@@ -242,7 +242,7 @@
 
           <div class="container__subcontainer">
             <p>
-              Дітям від 12 років і дорослим: розсмоктувати по 1-2 таблетки 3 рази на добу
+              <b>Дітям від 12 років і дорослим:</b> розсмоктувати по 1-2 таблетки 3 рази на добу
             </p>
             <div class="subcontainer vertical">
               <div class="subcontainer-particle-1">
@@ -278,11 +278,11 @@
           <div class="container__subcontainer">
             <h4>При гострому захворюванні</h4>
             <p>
-              Дітям старше 12 років і дорослим: приймати по 10 крапель кожну годину (не більше 12 прийомів у день) до настання покращання
+              <b>Дітям старше 12 років і дорослим:</b> приймати по 10 крапель кожну годину (не більше 12 прийомів у день) до настання покращання
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
-                <b>В ПЕРШУ ДОБУ</b>
+                <b>У ПЕРШУ ДОБУ</b>
                 <b class="subtext">Кожну годину</b>
                 <p>(по 10 крапель)</p>
               </div>
@@ -308,7 +308,7 @@
           <div class="container__subcontainer">
             <h4>Для профілактики ГРВІ</h4>
             <p>
-              Дітям від 12 років і дорослим: 
+              <b>Дітям від 12 років і дорослим:</b>
 приймати по 10 крапель 3 рази на добу
             </p>
             <div class="subcontainer">
