--- a/influcid/index-ru.html
+++ b/influcid/index-ru.html
@@ -32,7 +32,7 @@
                 <li><a class="navmenu" href="#block-2" >Действие</a></li>
                 <li><a class="navmenu" href="#block-3" >Состав</a></li>
                 <li><a class="navmenu" href="#block-4" >Как принимать</a></li>
-                <li><a class="where-to-buy" href="#block-5" >Где купить</a></li>
+<!--                <li><a class="where-to-buy" href="#block-5" >Где купить</a></li>-->
                 <li><a href="index.html" >ua</a></li>
               </ul>
             </div>
@@ -161,7 +161,7 @@
         <div class="block-5__container">
           <div class="container__subcontainer">
             <p>
-              Детям от 1 года до 12 лет: рассасывать до полного растворения по 1 таблетке каждые 2 часа (не больше 8 таблеток в сутки) до наступления улучшения
+              <b>Детям от 1 года до 12 лет:</b> рассасывать до полного растворения по 1 таблетке каждые 2 часа (не больше 8 таблеток в сутки) до наступления улучшения
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
@@ -189,7 +189,7 @@
 
           <div class="container__subcontainer">
             <p>
-              Детям от 12 лет и  взрослым: рассасывать до полного растворения каждый час (не больше 12 таблеток в сутки) до наступления улучшения
+              <b>Детям от 12 лет и  взрослым:</b> рассасывать до полного растворения каждый час (не больше 12 таблеток в сутки) до наступления улучшения
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
@@ -223,7 +223,7 @@
         <div class="block-5__container">
           <div class="container__subcontainer">
             <p>
-              Детям от 1 до 12 лет:  рассасывать по 1 таблетке 3 раза в сутки
+              <b>Детям от 1 до 12 лет:</b>  рассасывать по 1 таблетке 3 раза в сутки
             </p>
             <div class="subcontainer vertical">
               <div class="subcontainer-particle-1">
@@ -239,7 +239,7 @@
 
           <div class="container__subcontainer">
             <p>
-              Детям от 12 лет и взрослым: рассасывать по 1-2 таблетке 3 рази в сутки
+              <b>Детям от 12 лет и взрослым:</b> рассасывать по 1-2 таблетке 3 рази в сутки
             </p>
             <div class="subcontainer vertical">
               <div class="subcontainer-particle-1">
@@ -278,7 +278,7 @@
           <div class="container__subcontainer">
             <h4>При остром заболевании</h4>
             <p>
-              Детям старше 12 лет и взрослым: принимать по 10 капель каждый час (не больше 12 приёмов в день) до наступления улучшения
+              <b>Детям старше 12 лет и взрослым:</b> принимать по 10 капель каждый час (не больше 12 приёмов в день) до наступления улучшения
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
@@ -308,7 +308,7 @@
           <div class="container__subcontainer">
             <h4>Для профилактики ОРВИ</h4>
             <p>
-              Детям от 12 лет и взрослым: 
+              <b>Детям от 12 лет и взрослым:</b>
 принимать по 10 капель 3 раза в сутки
 
             </p>
@@ -381,8 +381,8 @@
                   <p>Предотвращает заболевания при контакте с больным</p>
                 </div>
                 <div class="panel__sub">
-                  <p>М.Ю. Еропкин, Т.М. Гкудкова, Д.М. Даниленко и соавт: «Пандемический грипп 2009 г в России», РМЖ Том 18, 2010</p>
-                  <p> М. Тинессе-Маллвиц, В. Майданник, Т. Келлер, П. Клемент. Комбинированное гомеопатическое средство для лечения лихорадочных ОРВИ:  Международное, рандомизированное, контролируемое исследование. Журнал «Forsch Komplementmed», Том 22, Издание 3, июнь 2015 г.</p>
+                  <p>* М.Ю. Еропкин, Т.М. Гкудкова, Д.М. Даниленко и соавт: «Пандемический грипп 2009 г в России», РМЖ Том 18, 2010</p>
+                  <p>** М. Тинессе-Маллвиц, В. Майданник, Т. Келлер, П. Клемент. Комбинированное гомеопатическое средство для лечения лихорадочных ОРВИ:  Международное, рандомизированное, контролируемое исследование. Журнал «Forsch Komplementmed», Том 22, Издание 3, июнь 2015 г.</p>
                   <p>¹www.phc.org.ua.</p>
                 </div>
               </div>
