--- a/influcid/index-ru.html
+++ b/influcid/index-ru.html
@@ -56,7 +56,7 @@
         <div class="main-img-container"></div>
         <a name="block-1"></a>
         <p>
-          <b>Простуда?</b> Выбор за тобой. <b>ИНФЛЮЦИД</b>
+          <b>Простуда?</b> Выбор за тобой. <b>Инфлюцид</b>
         </p>
 
         <div class="header-block-2">
@@ -78,7 +78,7 @@
         <h2>ПРЕИМУЩЕСТВА</h2>
         <div class="block-1__text">
           <p>
-            Устраняет типичные симптомы ОРВИ и гриппа.¹
+            Устраняет типичные симптомы простуды.¹
           </p>
           <p>
             Уменьшает потребность в  симптоматических средствах (жаропонижающих, каплях в нос, препаратах от кашля).²
@@ -102,7 +102,7 @@
             </b>
           </div>
           <div class="block-2__text">
-            <p>СНИЖАЕТ ПОВЫШЕННУЮ ТЕМПЕРАТУРУ</p>
+            <p>СНИЖАЕТ ТЕМПЕРАТУРУ</p>
             <p>УСТРАНЯЕТ ОЩУЩЕНИЕ ЛОМОТЫ В ТЕЛЕ</p>
             <p>СНИМАЕТ ГОЛОВНУЮ БОЛЬ</p>
             <p>УМЕНЬШАЕТ ЗАЛОЖЕННОСТЬ НОСА</p>
@@ -308,7 +308,7 @@
           <div class="container__subcontainer">
             <h4>Для профилактики ОРВИ</h4>
             <p>
-              <b>Детям от 12 лет и взрослым:</b>
+              <b>Детям старше 12 лет и взрослым:</b>
 принимать по 10 капель 3 раза в сутки
 
             </p>
@@ -348,35 +348,37 @@
             <h2>ПОЛЕЗНАЯ ИНФОРМАЦИЯ</h2>
             <div class="block-6__container">
               <div class="block-6__container-img"><p>Грипп сезона 2020</p></div>
-              <div class="block-6__container-text"><p>Эпидемиологический сезон начался и уже пора к нему готовить. Обратите внимание, что разница между гриппом и ОРВИ (острая респираторная вирусная инфекция) заключается в том, что возбудителями гриппа являются различные штаммы вируса гриппа (варианты одного вида вируса, что отличаются по ряду свойств), а возбудителями ОРВИ является более 200 разнообразных вирусов, которые часто не связаны генетически и принадлежат к разным группам заболеваний.</p>
-                <p>Чего ждать в новом сезоне 2020?</p>
+              <div class="block-6__container-text"><p>Эпидемиологический сезон начался и уже пора к нему готовиться. Обратите внимание, что разница между гриппом и ОРВИ (острая респираторная вирусная инфекция) заключается в том, что возбудителями гриппа являются различные штаммы вируса гриппа (варианты одного вида вируса, что отличаются по ряду свойств), а возбудителями ОРВИ является более 200 разнообразных вирусов, которые часто не связаны генетически и принадлежат к разным группам заболеваний.</p>
+                <p>Чего ждать в новом сезоне 2019 - 2020?</p>
               </div>
               <button class="accordion">Подробнее</button>
               <div class="panel">
-                <p>По расчетам ВОЗ, в течение нового эпидемического сезона в Северном полушарии будут циркулировать вирусы гриппа, подобные:</p>
+                <p>По расчетам ВОЗ в течение нового эпидемического сезона в Северном полушарии будут циркулировать вирусы гриппа, подобные:</p>
                 <ul>
                   <li>A/Brisbane/02/2018(H1N1) pdm09;</li>
                   <li>A/Kansas/14/2017(H3N2);</li>
                   <li>B/Colorado/06/2017 (лінія B/Victoria/2/87);</li>
                   <li>B/Phuket/3073/2013 (лінія B/Yamagata/16/88).¹</li>
                 </ul>
+                <p>Напомним основные симптомы гриппа:</p>
                 <div class="panel__checklist">
-                  <p>Напомним основные симптомы гриппа:</p>
+                  
                   <p>мгновенное начало;</p>
                   <p>головная боль;</p>
                   <p>повышение температуры тела до 38 ° С и более;</p>
                   <p>боль в горле;</p>
                   <p>кашель;</p>
                   <p>ломота в мышцах и суставах;</p>
-                  <p>может быть рвота и понос.</p>
-                  <p>как осложнение болезни - пневмония, которая иногда может за 4-5 дней привести к смерти больного. Также нередко развивается сердечная недостаточность.</p>
+                  <p>возможны рвота и понос.</p>
+                  
                 </div>
+                <p>Как осложнение болезни - пневмония, которая иногда может за 4-5 дней привести к смерти больного. Также нередко развивается сердечная недостаточность.</p>
                 <p>Если Вы уже заболели, обязательно обратитесь к своему семейному врачу или терапевту.</p>
-                <p class="panel__accent-text">Инфлюцид - ваш правильный выбор при простуде и гриппе.</p>
+                <p class="panel__accent-text">Инфлюцид - ваш правильный выбор при простуде и гриппе</p>
                 <div class="panel__checklist">
                   <p>Доказанная противовирусная активность препарата Инфлюцид при сезонном H1N1, H5N2, H3N2 гриппе *</p>
-                  <p>Активно борется с вирусами гриппа и ОРЗ *</p>
-                  <p>Быстро снимает типичные симптомы ОРВИ и гриппа</p>
+                  <p>Активно борется с вирусами гриппа и ОРВИ *</p>
+                  <p>Быстро снимает типичные симптомы ОРЗ и гриппа</p>
                   <p>Уменьшает потребность в применении симптоматических средств</p>
                   <p>Предотвращает заболевания при контакте с больным</p>
                 </div>
@@ -400,7 +402,7 @@
                   Эффективное лечение простуды и ОРВИ у детей требует немедленного реагирования на первые признаки:</p>
 
                   <div class="panel__checklist">
-                  <p>Плохое самочувствие, головная боль и мышц;</p>
+                  <p>Плохое самочувствие, головная боль;</p>
                   <p>Сонливость или нарушение сна;</p>
                   <p>Снижение аппетита;</p>
                   <p>Ухудшение настроения, капризность;</p>
@@ -409,7 +411,7 @@
                   <p>Ринит - в начале водянистые выделения, которые стекают также по задней стенке глотки, в дальнейшем - ощущение заложенности носа и нарушение носового дыхания, нарушение обоняния, чихание;¹</p>
                 </div>
                 <p>В сезон простуд так хочется поддержать иммунитет ребенка, чтобы он не болел или выздоравливал быстрее, как сделать это безопасно? Ведь для детей хочется применять только натуральные и проверенные средства.</p>
-                <p class="panel__accent-text">Инфлюцид - ваш правильный выбор при простуде и гриппе.</p>
+                <p class="panel__accent-text">Инфлюцид - ваш правильный выбор при простуде и гриппе</p>
                 <p>Немецкий препарат Инфлюцид укрепляет иммунитет и способствует выздоровлению.
                   Эффективность и безопасность препарата Инфлюцид изучены в ходе многих клинических исследований, в том числе с участием детей *.
                 </p>
