--- a/influcid/index.html
+++ b/influcid/index.html
@@ -78,7 +78,7 @@
         <h2>ПЕРЕВАГИ</h2>
         <div class="block-1__text">
           <p>
-            Швидко зупиняє типові ознаки гострої інфекції дихальних шляхів¹
+            Швидко зупиняє типові ознаки застуди¹
           </p>
           <p>
             Зменшує потребу у застосуванні симптоматичних засобів (жарознижуючих, краплях в ніс, препаратах від кашлю)²
@@ -179,7 +179,7 @@
                   ПРИ ПОДАЛЬШОМУ<br />ЛІКУВАННІ
                 </b>
                 <b class="subtext">До одужання</b>
-                <p>(по 1 таблетці 3 рази на день)</p>
+                <p>(по 1 таблетці 3 рази на добу)</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -266,7 +266,7 @@
         </div>
         <div class="bottom-text__b">
           <b>
-            Таблетки слід повільно розсмоктувати в порожнині роту. Дітям до 3 років рекомендується розчиняти таблетку в невеликій кількості води. 
+            Таблетки слід повільно розсмоктувати в порожнині роту. Дітям до 3 років можна розчиняти таблетку в невеликій кількості води.
 Препарат приймати за 30 хвилин до або через 30 хвилин після їди.
           </b>
         </div>
@@ -278,7 +278,7 @@
           <div class="container__subcontainer">
             <h4>При гострому захворюванні</h4>
             <p>
-              <b>Дітям старше 12 років і дорослим:</b> приймати по 10 крапель кожну годину (не більше 12 прийомів у день) до настання покращання
+              <b>Дітям старше 12 років і дорослим:</b> приймати по 10 крапель кожну годину (не більше 12 прийомів на добу) до настання покращання
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
@@ -335,7 +335,7 @@
 
           </p>
           <p>
-            Краплі розчину приймають за 30 хвилин до або через 30 хвилин після їди, потримавши їх деякий час у роті перед тим як проковтнути. Дітям віком від 12 років препарат можна розчиняти у невеликій кількості води (наприклад, у чайній ложці води).
+            Краплі розчину приймають за 30 хвилин до або через 30 хвилин після їди, потримавши їх деякий час у роті перед тим як проковтнути. Препарат можна розчиняти у невеликій кількості води (наприклад, у чайній ложці води).
           </p>
         </div>
         <a class="buy-btn">Де купити</a>
@@ -346,20 +346,21 @@
             <h2>КОРИСНА ІНФОРМАЦІЯ</h2>
             <div class="block-6__container">
               <div class="block-6__container-img"><p>Грип сезону 2020</p></div>
-              <div class="block-6__container-text"><p>Епідеміологічний сезон розпочався і вже настав час до нього готуватися. Зверніть увагу, що різниця між грипом та ГРВІ (гострою респіраторною вірусною інфекцією) полягає у тому, що збудниками грипу є різні штами вірусу грипу (варіанти одного виду вірусу, що відрізняються за рядом властивостей), а збудниками ГРВІ є понад 200 різноманітних вірусів, які часто не пов'язані генетично та належать до різних груп захворювань.</p>
-                <p>Чого чекати у новому сезоні 2020 рр.?</p>
+              <div class="block-6__container-text"><p>Епідеміологічний сезон розпочався, і вже настав час до нього готуватися. Зверніть увагу, що різниця між грипом та ГРВІ (гострою респіраторною вірусною інфекцією) полягає у тому, що збудниками грипу є різні штами вірусу грипу (варіанти одного виду вірусу, що відрізняються за рядом властивостей), а збудниками ГРВІ є понад 200 різноманітних вірусів, які часто не пов'язані генетично та належать до різних груп захворювань.</p>
+                <p>Чого чекати у новому сезоні 2019 - 2020 рр.?</p>
               </div>
               <button class="accordion">Детальнiше</button>
               <div class="panel">
-                <p>За розрахунками ВООЗ, упродовж нового епідемічного сезону в Північній півкулі циркулюватимуть віруси грипу, подібні до:</p>
+                <p>За розрахунками ВООЗ упродовж нового епідемічного сезону в Північній півкулі циркулюватимуть віруси грипу, подібні до:</p>
                 <ul>
                   <li>A/Brisbane/02/2018(H1N1) pdm09;</li>
                   <li>A/Kansas/14/2017(H3N2);</li>
                   <li>B/Colorado/06/2017 (лінія B/Victoria/2/87);</li>
                   <li>B/Phuket/3073/2013 (лінія B/Yamagata/16/88).¹</li>
                 </ul>
+                <p>Нагадаємо основні симптоми грипу:</p>
                 <div class="panel__checklist">
-                  <p>Нагадаємо основні симптоми грипу:</p>
+
                   <p>раптовий початок;</p>
                   <p>головний біль;</p>
                   <p>підвищення температури тіла до 38 °С і більше;</p>
@@ -367,14 +368,15 @@
                   <p>кашель;</p>
                   <p>ломота у м’язах і суглобах;</p>
                   <p>може бути блювота та пронос.</p>
-                  <p>як ускладнення хвороби - пневмонія, яка інколи може за 4-5 днів призвести до смерті хворого. Також нерідко розвивається серцева недостатність.</p>
+
                 </div>
+                  <p>Як ускладнення хвороби - пневмонія, яка інколи може за 4-5 днів призвести до смерті хворого. Також нерідко розвивається серцева недостатність.</p>
                 <p>Якщо Ви вже захворіли, обов’язково зверніться до свого сімейного лікаря чи терапевта. </p>
                 <p class="panel__accent-text">Інфлюцид – ваш правильний вибір при застуді та грипі</p>
                 <div class="panel__checklist">
                   <p>Доведена противірусна активність Інфлюциду при сезонному  H1N1, H5N2, H3N2 грипі*</p>
-                  <p>Активно бореться з вірусами грипу та ГРЗ*</p>
-                  <p>Швидко знімає типові симптоми ГРВІ та грипу</p>
+                  <p>Активно бореться з вірусами грипу та ГРВІ*</p>
+                  <p>Швидко знімає типові симптоми ГРЗ та грипу</p>
                   <p>Зменшує потребу у застосуванні симптоматичних засобів**</p>
                   <p>Запобігає захворюванню при контакті з хворим</p>
                 </div>
